[package]
name = "tokio-go"
version = "0.1.4"
edition = "2021"
authors = ["chang"]
description = "a golang like macro: go! (closure) backed by tokio. Supports threadpool dedication."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["rt","rt-multi-thread","macros","time","sync"] }

[dev-dependencies]
tokio-test = "0.4.2"
